2002-12-24  James Henstridge  <james@daa.com.au>

	* pygobject.c (pygobject_init): add abstract type check here too.
	(pygobject_init): make this code more similar to pyg_object_new,
	so that it is easier to fix bugs in the future.

	* gobjectmodule.c (pyg_object_new): handle case of no keyword
	arguments.
	(pyg_object_new): refuse to instantiate an abstract type.

2002-12-23  James Henstridge  <james@daa.com.au>

	* autogen.sh (AUTOMAKE): use automake-1.7 in preference to 1.6.

	* configure.in (GLIB_LIBS): remove -export-dynamic from flags.

2002-12-22  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtk.override 
	(_wrap_gtk_text_view_get_location): Impl,
	patch from John Finlay, fixes 101714.
	(_wrap_gtk_text_view_get_line_at_y): Impl,
	patch from John Finlay, fixes 101716.
	(_wrap_gtk_text_view_get_line_yrange): Impl,
	patch from John Finlay, fixes 101720.	
	(_wrap_gtk_text_view_get_iter_at_location): Impl,
	patch from John Finlay, fixes 101722.
	
	* examples/pygtk-demo/demos/editable_cells.py: New demo.
	* examples/pygtk-demo/pygtk-demo.py: Rearrange code a bit.
	* examples/pygtk-demo/demos/*.py: Clean up a bit.

	* gtk/gtk.override
	(_wrap_gtk_tree_view_insert_column_with_attributes): If the first
	argument (position) is -1, the column will be inserted at the end
	of the list, there for the new position will be columns - 1. If
	the columns isn't 1, it will be inserted at the requested
	position. This makes this function work again.
	

2002-12-19  Johan Dahlin  <jdahlin@async.com.br>

        * gtk/gdk.override: Integrate patch by David I. Lehn, improves
        threading support, fixes #98380.
        
2002-12-18  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtk.override (_wrap_gtk_text_buffer_get_selection_bounds):
	Impl, based upon patch by John Finlay, fixes #101499.
	(_wrap_gtk_text_view_get_visible_rect): Impl, patch by John
	Finlay, fixes #101503.
	(_wrap_gtk_tree_view_get_visible_rect): Impl, patch by John
	Finlay, fixes #101505.