@@ -3,6 +3,8 @@
 	* pygobject.c (pygobject_init): add abstract type check here too.
 	(pygobject_init): make this code more similar to pyg_object_new,
 	so that it is easier to fix bugs in the future.
+	(pygobject_chain_from_overridden): check if
+	g_signal_get_invocation_hint() returns NULL.
 
 	* gobjectmodule.c (pyg_object_new): handle case of no keyword
 	arguments.
